Fix search positioning when mobile menu button switches visibility

--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -181,6 +181,7 @@
     display: inline-block;
     height: 34px;
     line-height: normal;
+    margin-right: 10px;
     padding: 8px 14px 6px;
     text-decoration: none;
 
