--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -11,12 +11,11 @@
 
     .main-search {
         display: inline-block;
-        margin: 0 0 0 10px;
+        margin: 0;
         vertical-align: top;
         width: calc(100% - 84px);
 
         @include respond-min($screen-tablet) {
-            margin: 0;
             max-width: 200px;
             width: calc(100% - 100px);
         }
